--- a/index.html
+++ b/index.html
@@ -92,7 +92,9 @@
           <img src="assets/img/hero-carousel/hero-carousel-1.jpg" alt="">
           <div class="container">
             <h2>Bem vindo a Galêneses</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <p>Nós uma instituição dedicada à formação técnica de profissionais de saúde, contamos com um laboratório clínico e uma farmácia comunitária,temos parcerias com instituições renomadas em âmbito nacional, destacando-se a <strong>ASSOFARMA</strong> (Associação dos Profissionais de Farmácia de Angola)
+            </p>
+          
             <a href="#about" class="btn-get-started">Mais</a>
           </div>
         </div><!-- End Carousel Item -->
@@ -100,18 +102,18 @@
         <div class="carousel-item">
           <img src="assets/img/hero-carousel/hero-carousel-2.jpg" alt="">
           <div class="container">
-            <h2>At vero eos et accusamus</h2>
-            <p>Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut.</p>
-            <a href="#about" class="btn-get-started">Read More</a>
+            <h2>Bem vindo a Galêneses</h2>
+            <p>Nós uma instituição dedicada à formação técnica de profissionais de saúde, contamos com um laboratório clínico e uma farmácia comunitária,temos parcerias com instituições renomadas em âmbito nacional, destacando-se a <strong>ASSOFARMA</strong> (Associação dos Profissionais de Farmácia de Angola)
+            </p>> <a href="#about" class="btn-get-started">Read More</a>
           </div>
         </div><!-- End Carousel Item -->
 
         <div class="carousel-item">
           <img src="assets/img/hero-carousel/hero-carousel-3.jpg" alt="">
           <div class="container">
-            <h2>Temporibus autem quibusdam</h2>
-            <p>Beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt omnis iste natus error sit voluptatem accusantium.</p>
-            <a href="#about" class="btn-get-started">Read More</a>
+            <h2>Bem vindo a Galêneses</h2>
+            <p>Nós uma instituição dedicada à formação técnica de profissionais de saúde, contamos com um laboratório clínico e uma farmácia comunitária,temos parcerias com instituições renomadas em âmbito nacional, destacando-se a <strong>ASSOFARMA</strong> (Associação dos Profissionais de Farmácia de Angola)
+            </p> <a href="#about" class="btn-get-started">Read More</a>
           </div>
         </div><!-- End Carousel Item -->
 
@@ -182,8 +184,8 @@
           <div class="col-xl-10">
             <div class="text-center">
               <h3>Porque muitos nos escolhem ?</h3>
-              <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-              <a class="cta-btn" href="#appointment">Make an Appointment</a>
+              <p>A Galêneses oferece uma formação técnica de alta qualidade, focada nas necessidades reais do mercado de saúde. Nossos cursos são ministrados por profissionais experientes, garantindo que os alunos saiam preparados para enfrentar os desafios da área da saúde.</p>
+              <a class="cta-btn" href="#appointment">Vizualizar mais</a>
             </div>
           </div>
         </div>
@@ -210,17 +212,16 @@
           <div class="col-lg-6 content" data-aos="fade-up" data-aos-delay="200">
             <h3>Academia Galêneses</h3>
             <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              Fundada em 25 de outubro de 2021, a Galêneses é uma instituição dedicada à formação técnica de profissionais de saúde, com o compromisso de contribuir para o desenvolvimento e excelência na área da saúde em Angola. Com uma abordagem que combina teoria e prática, oferecemos cursos especializados que preparam nossos alunos para enfrentar os desafios do setor com competência e ética.
+
             </p>
             <ul>
-              <li><i class="bi bi-check2-all"></i> <span>Ullamco laboris nisi ut aliquip ex ea commodo consequat.</span></li>
-              <li><i class="bi bi-check2-all"></i> <span>Duis aute irure dolor in reprehenderit in voluptate velit.</span></li>
-              <li><i class="bi bi-check2-all"></i> <span>Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</span></li>
+              <li><i class="bi bi-check2-all"></i> <span>Nossa missão é formar profissionais de saúde altamente capacitados, prontos para contribuir positivamente para o bem-estar da sociedade..</span></li>
+              <li><i class="bi bi-check2-all"></i> <span>Nossa visão Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur</span></li>
+              <li><i class="bi bi-check2-all"></i> <span>Nossos valores laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</span></li>
             </ul>
             <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident
+              A Galêneses opera um laboratório clínico e uma farmácia comunitária, proporcionando aos nossos alunos uma formação completa e alinhada às exigências do mercado. Essas instalações não apenas enriquecem a experiência educacional, mas também servem à comunidade local, reforçando nosso compromisso com a saúde pública.              
             </p>
           </div>
         </div>
@@ -292,7 +293,8 @@
 
           <div class="col-lg-5 d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="200">
             <h3>Galêneses e Assofarma</h3>
-            <p>Esse voluptas cumque vel exercitationem. Reiciendis est hic accusamus. Non ipsam et sed minima temporibus laudantium. Soluta voluptate sed facere corporis dolores excepturi</p>
+            <p>A Galêneses se orgulha de suas parcerias estratégicas com instituições renomadas em nível nacional, como a ASSOFARMA (Associação dos Profissionais de Farmácia de Angola). Essas colaborações nos permitem oferecer uma educação de qualidade, reconhecida e respeitada em todo o país.
+            </p>
 
             <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="300">
               <i class="fa-solid fa-hand-holding-medical flex-shrink-0"></i>
